@@ -14,6 +14,8 @@
 
 namespace Castle.Facilities.Startable.Tests
 {
+	using System.Collections;
+	using Castle.Core;
 	using Castle.Core.Configuration;
 	using Castle.Facilities.Startable.Tests.Components;
 	using Castle.MicroKernel;
@@ -22,14 +24,25 @@ namespace Castle.Facilities.Startable.Tests
 	[TestFixture]
 	public class StartableFacilityTestCase
 	{
+		private bool startableCreatedBeforeResolved;
+
+		[SetUp]
+		public void SetUp()
+		{
+			startableCreatedBeforeResolved = false;
+		}
+
 		[Test]
 		public void TestInterfaceBasedStartable()
 		{
 			IKernel kernel = new DefaultKernel();
+			kernel.ComponentCreated += new ComponentInstanceDelegate(OnStartableComponentStarted);
 
 			kernel.AddFacility("startable", new StartableFacility());
 
 			kernel.AddComponent("a", typeof(StartableComponent));
+
+			Assert.IsTrue(startableCreatedBeforeResolved, "Component was not properly started");
 
 			StartableComponent component = kernel["a"] as StartableComponent;
 
@@ -45,6 +58,7 @@ namespace Castle.Facilities.Startable.Tests
 		public void TestComponentWithNoInterface()
 		{
 			IKernel kernel = new DefaultKernel();
+			kernel.ComponentCreated += new ComponentInstanceDelegate(OnNoInterfaceStartableComponentStarted);
 
 			MutableConfiguration compNode = new MutableConfiguration("component");
 			compNode.Attributes["id"] = "b";
@@ -56,6 +70,9 @@ namespace Castle.Facilities.Startable.Tests
 
 			kernel.AddFacility("startable", new StartableFacility());
 			kernel.AddComponent("b", typeof(NoInterfaceStartableComponent));
+
+			Assert.IsTrue(startableCreatedBeforeResolved, "Component was not properly started");
+
 			NoInterfaceStartableComponent component = kernel["b"] as NoInterfaceStartableComponent;
 
 			Assert.IsNotNull(component);
@@ -64,6 +81,53 @@ namespace Castle.Facilities.Startable.Tests
 
 			kernel.ReleaseComponent(component);
 			Assert.IsTrue(component.Stopped);
+		}
+
+		[Test, Ignore("Pending resolution")]
+		public void TestStartableWithCustomDependencies()
+		{
+			IKernel kernel = new DefaultKernel();
+			kernel.ComponentCreated += new ComponentInstanceDelegate(OnStartableComponentStarted);
+
+			kernel.AddFacility("startable", new StartableFacility());
+
+			Hashtable dependencies = new Hashtable();
+			dependencies.Add("config", 1);
+			kernel.AddComponent("a", typeof(StartableComponentWithCustomDependencies));
+			kernel.RegisterCustomDependencies(typeof(StartableComponentWithCustomDependencies), dependencies);
+
+			Assert.IsTrue(startableCreatedBeforeResolved, "Component was not properly started");
+
+			StartableComponentWithCustomDependencies component = kernel["a"] as StartableComponentWithCustomDependencies;
+
+			Assert.IsNotNull(component);
+			Assert.IsTrue(component.Started);
+			Assert.IsFalse(component.Stopped);
+
+			kernel.ReleaseComponent(component);
+			Assert.IsTrue(component.Stopped);
+		}
+
+		private void OnStartableComponentStarted(ComponentModel mode, object instance)
+		{
+			StartableComponent startable = instance as StartableComponent;
+
+			Assert.IsNotNull(startable);
+			Assert.IsTrue(startable.Started);
+			Assert.IsFalse(startable.Stopped);
+
+			startableCreatedBeforeResolved = true;
+		}
+
+		private void OnNoInterfaceStartableComponentStarted(ComponentModel mode, object instance)
+		{
+			NoInterfaceStartableComponent startable = instance as NoInterfaceStartableComponent;
+
+			Assert.IsNotNull(startable);
+			Assert.IsTrue(startable.Started);
+			Assert.IsFalse(startable.Stopped);
+
+			startableCreatedBeforeResolved = true;
 		}
 	}
 }
