@@ -7,5 +7,7 @@
       type="Castle.Windsor.Tests.DatabaseResultFinder`1, Castle.Windsor.Tests"/>
     <component id="ws_finder" service="Castle.Windsor.Tests.IResultFinder`1, Castle.Windsor.Tests"
       type="Castle.Windsor.Tests.WebServiceResultFinder`1, Castle.Windsor.Tests"/>
+    <component id="string_finder" service="Castle.Windsor.Tests.IResultFinder`1[[System.String, mscorlib]], Castle.Windsor.Tests"
+      type="Castle.Windsor.Tests.ResultFinderStringDecorator, Castle.Windsor.Tests"/>	
   </components>
 </configuration>
